--- a/ContactUs/contact.html
+++ b/ContactUs/contact.html
@@ -6,7 +6,7 @@
     <title>Contact Us - Hotel</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+      href="https://cadn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <link
       rel="stylesheet"
