--- a/Registrationpage/registration.html
+++ b/Registrationpage/registration.html
@@ -3,91 +3,115 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    <title>Registration</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./css/registration.css" />
   </head>
-  <link rel="stylesheet" href="./css/registration.css" />
   <body>
-    <section class="contact-container">
-      <div class="card shadow p-3 mb-2 bg-body-tertiary rounded">
-        <div class="card-body">
-          <form class="form">
-            <div class="login text-center flex-md-row ms-md-3">
-              <div class="logo">
-                <img class="img-logo" src="./img/logo3.jpg" alt="Logo" />
+    <section class="main py-5 d-flex align-items-center">
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-lg-6 col-md-8">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <!-- form start -->
+                <form class="form">
+                  <div class="row login flex-md-row ms-md-3">
+                    <div class="col-md-3">
+                      <img class="img-logo" src="./img/logo3.jpg" alt="" />
+                    </div>
+                    <div class="col-md-9">
+                      <h2 class="ms-md-5 mb-4">Register</h2>
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="fullName"
+                      aria-describedby="emailHelp"
+                      placeholder="Enter Full Name"
+                      autofocus
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="email"
+                      aria-describedby="emailHelp"
+                      placeholder="Enter email"
+                      autofocus
+                      required
+                    />
+                  </div>
+                  <div class="valid-feedback">Looks good!</div>
+                  <div class="mb-3">
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="pass"
+                      placeholder="password"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="repeatPass"
+                      placeholder="Repeat password"
+                    />
+                  </div>
+                  <div class="mb-3 form-check">
+                    <input
+                      type="checkbox"
+                      class="form-check-input mt-1"
+                      id="showPasswordCheck"
+                      onclick="showHide(); return "
+                    />
+                    <label class="form-check-label" for="showPasswordCheck"
+                      >Show Password</label
+                    >
+                  </div>
+                  <div class="mb-3 form-check">
+                    <input
+                      type="checkbox"
+                      class="form-check-input mt-1"
+                      id="exampleCheck1"
+                    />
+                    <label class="form-check-label" for="termsCheck"
+                      >I accept the terms & conditions</label
+                    >
+                  </div>
+                  <div class="text-center">
+                    <button
+                      onclick="submitForm(); return false"
+                      class="btn py-2 btn"
+                    >
+                      Register
+                    </button>
+                  </div>
+                  <div class="msg"></div>
+                </form>
+
+                <!-- form end -->
               </div>
-              <h2 class="color ms-md-3 text-decoration-underline">Register</h2>
             </div>
-
-            <div class="mb-3">
-              <input
-                type="text"
-                class="form-control"
-                id="fullName"
-                aria-describedby="emailHelp"
-                placeholder="Enter Full Name"
-                autofocus
-              />
-            </div>
-            <div class="mb-3">
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                aria-describedby="emailHelp"
-                placeholder="Enter email"
-                autofocus
-                required
-              />
-            </div>
-            <div class="valid-feedback">Looks good!</div>
-            <div class="mb-3">
-              <input
-                type="password"
-                class="form-control"
-                id="pass"
-                placeholder="password"
-              />
-            </div>
-            <div class="mb-3">
-              <input
-                type="password"
-                class="form-control"
-                id="repeatPass"
-                placeholder="Repeat password"
-              />
-            </div>
-
-            <div class="mb-3 form-check">
-              <input
-                type="checkbox"
-                class="form-check-input mt-1"
-                id="showPasswordCheck"
-                onclick="showHide(); return "
-              />
-              <label class="form-check-label" for="showPasswordCheck"
-                >Show Password</label
-              >
-            </div>
-            <div class="mb-3 form-check">
-              <input
-                type="checkbox"
-                class="form-check-input mt-1"
-                id="exampleCheck1"
-              />
-              <label class="form-check-label" for="termsCheck"
-                >I accept the terms & conditions</label
-              >
-            </div>
-            <div class="text-center">
-              <button onclick="submitForm(); return false" class="btn py-2 btn">Register</button>
-            </div>
-            <div class="msg"></div>
-          </form>
+          </div>
         </div>
       </div>
     </section>
+    <footer class="text-center py-1 mb-0 bg-light">
+      <p class="mb-0">&copy; 2024 All Rights Reserved.</p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/registration.js"></script>
   </body>
