--- a/Registrationpage/registration.html
+++ b/Registrationpage/registration.html
@@ -87,6 +87,7 @@
                     />
                     <!-- <div class="invalid-feedback">password donot match</div> -->
                   </div>
+                  <div class="pw"></div>
                   <div class="mb-3 form-check">
                     <input
                       type="checkbox"
