--- a/ContactUs/contact.html
+++ b/ContactUs/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - Hotel</title>
+    <title>Contact Us</title>
     <link
       rel="stylesheet"
       href="https://cadn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -22,10 +22,10 @@
             <div class="card shadow-sm">
               <div class="card-body">
                 <div class="row login flex-md-row ms-md-3">
-                  <div class="col-md-3 ">
+                  <div class="col-md-3">
                     <img class="img-logo" src="./img/logo3.jpg" alt="" />
                   </div>
-                  <div class="col-md-9 ">
+                  <div class="col-md-9">
                     <h2 class="ms-md-5 mb-4">Contact Us</h2>
                   </div>
                 </div>
